Pull to Refresh, Main list formatting, No nw error

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Nadget</string>
 
     <string name="placeholder">News about gadgets and mobiles</string>
-
+    <string name="menu_refresh">Refresh</string>
     <string name="connection_error">Unable to connect. Please check your network connectivity</string>
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
