--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="title_activity_nadget_settings">Settings</string>
     <string name="title_activity_feed_selector">Select Feeds</string>
     <string name="no_data_available">Please choose a few feeds to get started</string>
+    <string name="dialog_message">No content</string>
+    <string name="ok">OK</string>
 
     <!-- Strings related to Settings -->
 
