Added Settings, About, Suggest Feeds, Licenses and bug fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,10 @@
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
     <string name="title_activity_post_view">View Post</string>
+    <string name="title_activity_suggest_feed">Suggest News Source</string>
+    <string name="title_activity_licenses">Licenses</string>
+    <string name="title_about">About Nadget</string>
+
     <string name="disclaimer_text">All logos are respective trademarks of their owners.</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_nadget_settings">Settings</string>
@@ -14,33 +18,8 @@
     <string name="no_data_available">Please choose a few feeds to get started</string>
     <string name="dialog_message">No content</string>
     <string name="ok">OK</string>
+    <string name="settings">Settings</string>
 
-    <!-- Strings related to Settings -->
 
-    <!-- Example General settings -->
-
-    <!-- Example settings for Data & Sync -->
-    <string name="pref_header_data_sync">Data &amp; sync</string>
-
-    <string name="pref_title_sync_frequency">Sync frequency</string>
-    <string-array name="pref_sync_frequency_titles">
-        <item>15 minutes</item>
-        <item>30 minutes</item>
-        <item>1 hour</item>
-        <item>3 hours</item>
-        <item>6 hours</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_sync_frequency_values">
-        <item>15</item>
-        <item>30</item>
-        <item>60</item>
-        <item>180</item>
-        <item>360</item>
-        <item>-1</item>
-    </string-array>
-
-    <!-- Example settings for Notifications -->
-    <string name="pref_header_notifications">Notifications</string>
 
 </resources>
