Added Dark theme, disable pics option, rate & share app options, fixed bug on empty feeds

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,8 @@
     <string name="action_share">Share</string>
     <string name="no_favorites">No saved articles </string>
     <string name="logo">n@dget</string>
+    <string name="rate">Now</string>
+    <string name="remind">Later</string>
+    <string name="noThanks">Never</string>
 
 </resources>
