New Options Menu & Notifications
Added Dark Theme and Settings to Options menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,7 @@
     <string name="rate">Now</string>
     <string name="remind">Later</string>
     <string name="noThanks">Never</string>
+    <string name="darkTheme">Dark Theme</string>
+    <string name="notify">Time for some tech news!</string>
 
 </resources>
