--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_nadget_settings">Settings</string>
     <string name="title_activity_feed_selector">Select Feeds</string>
-    <string name="no_data_available">Please choose a few feeds to get started</string>
+    <string name="no_data_available">\n\n\n\n Please choose a few feeds to get started</string>
     <string name="dialog_message">No content</string>
     <string name="ok">OK</string>
     <string name="settings">Settings</string>
@@ -25,6 +25,7 @@
     <string name="action_share">Share</string>
     <string name="no_favorites">No saved articles </string>
     <string name="logo">n@dget</string>
+    <string name="shortlogo">n@g</string>
     <string name="rate">Now</string>
     <string name="remind">Later</string>
     <string name="noThanks">Never</string>
