--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,6 @@
     <string name="app_name">Nadget</string>
 
     <string name="placeholder">News about gadgets and mobiles</string>
-    <string name="menu_refresh">Refresh</string>
-    <string name="connection_error">Unable to connect. Please check your network connectivity</string>
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
     <string name="title_activity_post_view">View Post</string>
@@ -13,13 +11,10 @@
     <string name="title_activity_licenses">Licenses</string>
     <string name="title_about">About Nadget</string>
 
-    <string name="disclaimer_text">All logos are respective trademarks of their owners.</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_nadget_settings">Settings</string>
     <string name="title_activity_feed_selector">Select Feeds</string>
     <string name="no_data_available">\n\n\n\n Please choose a few feeds to get started</string>
-    <string name="dialog_message">No content</string>
-    <string name="ok">OK</string>
     <string name="settings">Settings</string>
     <string name="action_favorite">Save for later</string>
     <string name="action_share">Share</string>
@@ -30,6 +25,6 @@
     <string name="remind">Later</string>
     <string name="noThanks">Never</string>
     <string name="darkTheme">Dark Theme</string>
-    <string name="notify">Time for some tech news!</string>
+    <string name="action_noimages">No Images</string>
 
 </resources>
